--- a/.github/cicd.yml
+++ b/.github/cicd.yml
@@ -9,16 +9,7 @@ on:
       - main
 
 jobs:
-  test_job:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Git Clone
-        uses: actions/checkout@v2
-      - name: Read hello.txt
-        run: cat hello.txt
-
-  build_job:
-    needs: test_job
+  test:
     runs-on: ubuntu-latest
     steps:
       - name: Git Clone
@@ -28,3 +19,49 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '16'
+
+      - name: Install Packages
+        run: npm install
+
+      - name: Testing The Application
+        run: npm run check > test-results.txt
+
+      - name: Upload Test Results
+        uses: actions/upload-artifact@v3
+        with:
+          name: test-results
+          path: test-results.txt
+
+  deploy:
+    needs: test
+    runs-on: self-hosted
+    steps:
+      - name: Git Clone
+        uses: actions/checkout@v2
+
+      - name: Download Test Results
+        uses: actions/download-artifact@v3
+        with:
+          name: test-results
+
+      - name: Display Test Results
+        run: cat test-results.txt
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16'
+
+      - name: Install Packages
+        run: npm install
+
+      - name: Install PM2
+        run: npm install -g pm2
+
+      - name: Cleanup Existing Process
+        run: pm2 delete node-app || true
+
+      - name: Start Application with PM2
+        run: pm2 start "./src/server.js" --name node-app
+
+      - name: Save PM2 Process List
