--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,16 +9,16 @@ on:
       - main
 
 jobs:
-  test:
+  prerequisites:
     runs-on: ubuntu-latest
     steps:
       - name: Git Clone
         uses: actions/checkout@v2
 
       - name: Setup Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v4
         with:
-          node-version: '16'
+          node-version: '22'
 
       - name: Install Packages
         run: npm install
@@ -32,8 +32,11 @@ jobs:
           name: test-results
           path: test-results.txt
 
+      - name: Run the Application
+        run: npm start
+
   deploy:
-    needs: test
+    needs: prerequisites
     runs-on: self-hosted
     steps:
       - name: Git Clone
@@ -48,9 +51,9 @@ jobs:
         run: cat test-results.txt
 
       - name: Setup Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v4
         with:
-          node-version: '16'
+          node-version: '22'
 
       - name: Install Packages
         run: npm install
@@ -65,3 +68,4 @@ jobs:
         run: pm2 start "./src/server.js" --name node-app
 
       - name: Save PM2 Process List
+        run: pm2 save
