--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,8 +32,8 @@ jobs:
           name: test-results
           path: test-results.txt
 
-      - name: Run the Application
-        run: npm start
+     # - name: Run the Application
+     #   run: npm start
 
   deploy:
     needs: prerequisites
