--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,4 +48,24 @@ jobs:
           name: test-results
 
       - name: Display Test Results
-        run: cat test-results.txt
+    run: cat test-results.txt
+
+  - name: Setup Node.js
+    uses: actions/setup-node@v4
+    with:
+      node-version: '22'
+
+  - name: Install Packages
+    run: npm install
+
+  - name: Install PM2
+    run: npm install -g pm2
+
+  - name: Cleanup Existing Process
+    run: pm2 delete node-app || true
+
+  - name: Start Application with PM2
+    run: pm2 start "./src/server.js" --name node-app
+
+  - name: Save PM2 Process List
+    run: pm2 save
